<?php
/**
 * Created by PhpStorm.
 * User: wangxiguang
 * Date: 11/5/18
 * Time: 4:49 PM
 */

namespace DesignPatterns\Creational\Builder\Parts;


class Trunk
{

}